attached_assets/Pasted--Task-mergeDebugNativeLibs-NO-SOURCE-Task-stripDebugDeb_1767628412064.txt
 Task :mergeDebugNativeLibs NO-SOURCE
> Task :stripDebugDebugSymbols NO-SOURCE
> Task :validateSigningDebug
> Task :writeDebugAppMetadata
> Task :writeDebugSigningConfigVersions
> Task :compressDebugAssets
> Task :mergeDebugResources
> Task :processDebugResources

> Task :compileDebugJavaWithJavac
/home/runner/work/UnBelievable-Keyboard/UnBelievable-Keyboard/srcs/juloo.keyboard2/KeyEventHandler.java:507: error: cannot find symbol
  public static interface IReceiver extends Suggestions.Callback
                                                       ^
  symbol:   class Callback
  location: class Suggestions
/home/runner/work/UnBelievable-Keyboard/UnBelievable-Keyboard/srcs/juloo.keyboard2/Suggestions.java:10: error: cannot find symbol
  Callback _callback;
  ^
  symbol:   class Callback
  location: class Suggestions
/home/runner/work/UnBelievable-Keyboard/UnBelievable-Keyboard/srcs/juloo.keyboard2/Suggestions.java:12: error: cannot find symbol
  public Suggestions(Callback c)
                     ^
  symbol:   class Callback
  location: class Suggestions
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
3 errors

> Task :compileDebugJavaWithJavac FAILED
> Task :mergeExtDexDebug
gradle/actions: Writing build results to /home/runner/work/_temp/.gradle-actions/build-results/__run_2-1767628327547.json


FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  Note: Recompile with -Xlint:deprecation for details.
  /home/runner/work/UnBelievable-Keyboard/UnBelievable-Keyboard/srcs/juloo.keyboard2/KeyEventHandler.java:507: error: cannot find symbol
    public static interface IReceiver extends Suggestions.Callback
                                                         ^
    symbol:   class Callback
    location: class Suggestions
[Incubating] Problems report is available at: file:///home/runner/work/UnBelievable-Keyboard/UnBelievable-Keyboard/build/reports/problems/problems-report.html
32 actionable tasks: 32 executed
Configuration cache entry stored.
  /home/runner/work/UnBelievable-Keyboard/UnBelievable-Keyboard/srcs/juloo.keyboard2/Suggestions.java:10: error: cannot find symbol
    Callback _callback;
    ^
    symbol:   class Callback
    location: class Suggestions
  /home/runner/work/UnBelievable-Keyboard/UnBelievable-Keyboard/srcs/juloo.keyboard2/Suggestions.java:12: error: cannot find symbol
    public Suggestions(Callback c)
                       ^
    symbol:   class Callback
    location: class Suggestions
  Note: Recompile with -Xlint:unchecked for details.
  Note: Some input files use or override a deprecated API.
  Note: Some input files use unchecked or unsafe operations.
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 21s
Error: Process completed with exit code 1.
0s
